hphp/hack/test/typecheck/constraints/generic_self_type_access_failure.php.rust_elab.exp
ERROR: File "generic_self_type_access_failure.php", line 18, characters 36-53:
Some type arguments violate their constraints (Typing[4323])
  File "generic_self_type_access_failure.php", line 11, characters 32-33:
  `TX` is a constrained type parameter
  File "generic_self_type_access_failure.php", line 11, characters 38-40:
  This type constraint is violated
  File "generic_self_type_access_failure.php", line 11, characters 38-40:
  Expected `Box`
  File "generic_self_type_access_failure.php", line 7, characters 28-31:
  But got `Intf`
ERROR: File "generic_self_type_access_failure.php", line 18, characters 36-53:
Some type arguments violate their constraints (Typing[4323])
  File "generic_self_type_access_failure.php", line 11, characters 32-33:
  `TX` is a constrained type parameter
  File "generic_self_type_access_failure.php", line 11, characters 38-40:
  This type constraint is violated
  File "generic_self_type_access_failure.php", line 11, characters 38-40:
  Expected `Box`
  File "generic_self_type_access_failure.php", line 18, characters 30-33:
  But got `Intf`
ERROR: File "generic_self_type_access_failure.php", line 18, characters 36-53:
Some type arguments violate their constraints (Typing[4323])
  File "generic_self_type_access_failure.php", line 11, characters 32-33:
  `TX` is a constrained type parameter
  File "generic_self_type_access_failure.php", line 11, characters 38-40:
  This type constraint is violated
  File "generic_self_type_access_failure.php", line 11, characters 38-40:
  Expected `Box`
  File "generic_self_type_access_failure.php", line 18, characters 52-52:
  But got `T = TX::T`
ERROR: File "generic_self_type_access_failure.php", line 18, characters 36-53:
Some type arguments violate their constraints (Typing[4323])
  File "generic_self_type_access_failure.php", line 11, characters 32-33:
  `TX` is a constrained type parameter
  File "generic_self_type_access_failure.php", line 11, characters 38-40:
  This type constraint is violated
  File "generic_self_type_access_failure.php", line 11, characters 38-40:
  Expected `Box`
  File "generic_self_type_access_failure.php", line 19, characters 9-13:
  But got `TX::T = T`
ERROR: File "generic_self_type_access_failure.php", line 18, characters 36-53:
Some type arguments violate their constraints (Typing[4323])
  File "generic_self_type_access_failure.php", line 11, characters 32-33:
  `TX` is a constrained type parameter
  File "generic_self_type_access_failure.php", line 11, characters 38-40:
  This type constraint is violated
  File "generic_self_type_access_failure.php", line 11, characters 38-40:
  Expected `Box`
  File "generic_self_type_access_failure.php", line 19, characters 13-13:
  But got `Box::T where \Box::T super TX::T, \Box::T as Intf`
  by accessing the type constant `T`
  File "generic_self_type_access_failure.php", line 19, characters 9-13:
  on a value of generic type TX
ERROR: File "generic_self_type_access_failure.php", line 18, characters 36-53:
Some type arguments violate their constraints (Typing[4323])
  File "generic_self_type_access_failure.php", line 11, characters 32-33:
  `TX` is a constrained type parameter
  File "generic_self_type_access_failure.php", line 11, characters 38-40:
  This type constraint is violated
  File "generic_self_type_access_failure.php", line 11, characters 38-40:
  Expected `Box`
  File "generic_self_type_access_failure.php", line 19, characters 17-17:
  But got `T = TX::T`
